--- a/css/2.css
+++ b/css/2.css
@@ -25,9 +25,19 @@ body{
     left: 0;
     width: 100%;
     z-index: 1;
+    transition: all 1s;
+    padding: 20px 0;
 }
+
+.topAnimation{
+    background-color: white;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.5);
+    padding: 10px 0;
+    color: #3d4451;
+}
+
 .topNavBar > .topNavBarSon{
-    margin-top: 20px ;
+    margin-top: 7px ;
 }
 .topNavBar > .topNavBarSon > .logo{
     float: left;
@@ -46,7 +56,7 @@ body{
 }
 
 .topNavBar > .topNavBarSon > .topList{
-    line-height: 37px;
+    /*line-height: 37px;*/
     margin-right: 30px;
     float: right;
 }
@@ -61,6 +71,27 @@ body{
     color: #b7b7b7;
     font-size: 12px;
     font-weight: bold;
+    position: relative;
+}
+.topNavBar > .topNavBarSon > .topList > li > a:hover::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #e06567;
+    width: 100%;
+    height: 3px;
+    border-radius: 2px;
+    animation: topDongHua .5s;
+}
+@keyframes topDongHua {
+    0%{
+        width: 0%;
+    }
+   100%{
+        width: 100%;
+    }
 }
 
 .banner{
