--- a/css/2.css
+++ b/css/2.css
@@ -15,6 +15,11 @@ ul ol{
     clear: both;
 }
 
+[data-x].active{
+    border: 3px  #e06567 solid;
+
+}
+
 body{
     background-color: #efefef;
 }
@@ -73,7 +78,19 @@ body{
     font-weight: bold;
     position: relative;
 }
-.topNavBar > .topNavBarSon > .topList > li > a:hover::after{
+.topNavBar > .topNavBarSon > .topList > li.active > a::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #e06567;
+    width: 100%;
+    height: 3px;
+    border-radius: 2px;
+    animation: topDongHua .5s;
+}
+.topNavBar > .topNavBarSon > .topList > li> a:hover::after{
     content: '';
     display: block;
     position: absolute;
